# giaic-hackathon-2-q4-phase04

./: .gitignore  DEPLOYMENT.md  GEMINI.md  K8S_DEPLOYMENT_SUMMARY.md  QUICK_REFERENCE.md  build-images.sh  cleanup.sh  deploy-local.sh
backend/: .dockerignore  .env.example  Dockerfile  dev.db  pyproject.toml  run_uvicorn.py
backend/src/: agent.py  auth.py  crud.py  database.py  main.py  mcp_tools.py  models.py  schemas.py
backend/tests/: test_agent.py  test_auth.py  test_crud.py  test_main.py
frontend/: .dockerignore  .env.local  Dockerfile  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: EditTaskForm.tsx  Header.tsx  NewTaskForm.tsx  TaskList.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/lib/: api.ts  formatError.ts
helm/todo-chat/: .helmignore  Chart.yaml  README.md  values-local.yaml  values.yaml
helm/todo-chat/templates/: NOTES.txt  _helpers.tpl  backend-deployment.yaml  backend-service.yaml  configmap.yaml  frontend-deployment.yaml  frontend-service.yaml  ingress.yaml  postgresql-deployment.yaml  postgresql-pvc.yaml  postgresql-service.yaml  secret.yaml  serviceaccount.yaml
history/prompts/001-multi-user-todo-auth/: 0001-create-multi-user-todo-auth-spec.spec.prompt.md  0002-create-plan-for-multi-user-todo-app.plan.prompt.md  (+3 more)
specs/001-multi-user-todo-auth/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-ai-chat-agent-frontend-integration/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+17 files in other folders)
